change productpage style

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,7 +53,7 @@ nav{
 
 }
 .category-body:hover{
-    border-bottom: cornflowerblue solid 3px;
+    border-bottom: rgb(100, 237, 155) solid 3px;
 }
 a{
     font-family: 'Raleway';
